--- a/index.html
+++ b/index.html
@@ -22,9 +22,7 @@
                     <h3>Deployed projects:</h3>
                     <a class="project" href="https://todolist-lekserg.herokuapp.com/" target="_blank">ToDo List</a>
                     <a class="project" href="https://ejsblog-lekserg.herokuapp.com/" target="_blank">EJS Blog</a>
-                    <a class="project" href="" target="_blank">ToDo List</a>
-                    <a class="project" href="" target="_blank">ToDo List</a>
-                    <a class="project" href="" target="_blank">ToDo List</a>                    
+                    <a class="project" href="https://lekserg.github.io/Demo/" target="_blank">Simple Demo</a>
                 </div>
                 <div class="contact">
                     <h3>LinkedIn: <a href="www.linkedin.com/in/lekserg" target="_blank">LEKSERG</a></h3> 
