--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
                 <img src="./001.jpg" alt="sergey">
                 <h2>Sergey Lekontsev</h2>
                 <h3>Software Developer | Lviv</h3>
-                <a id="cv" href="cv-en.docx" target="_blank">Download CV</a>
+                <a id="cv" href="CV-EN.pdf" target="_blank">Download CV</a>
                 <hr>
             </div>
             <div class="info">
