--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                     <a class="project" href="https://lekserg.github.io/Demo/" target="_blank">Simple Demo</a>
                 </div>
                 <div class="contact">
-                    <h3>LinkedIn: <a href="www.linkedin.com/in/lekserg" target="_blank">LEKSERG</a></h3> 
+                    <h3>LinkedIn: <a href="https://www.linkedin.com/in/lekserg/" target="_blank">LEKSERG</a></h3> 
                     <h3>Email: <a href="mailto:s_lekontsev@outlook.com">s_lekontsev@outlook.com</a></h3>
                     <h3>WhatsApp/ Telegram/ Viber: +380950945777</h3>
 
